# metaquantumrl

./: LICENSE  README.md  artifacts_readme (1).md  create_repo_script.sh  pyproject.toml  requirements.txt  setup.py
configs/: experiment_config.yaml  test_config.yaml
docs/: QUICKSTART.md  debugging_protocol.md  implementation_summary.md  main_experiment.py  minimal_test.py
experiments/: eval_gap_script.py  train_robust_script.py
scripts/: install.sh
src/baselines/: optimality_gap.py  robust_baseline.py
src/meta_rl/: maml_implementation.py  policy_network.py
src/quantum/: gates_fidelity.py  lindblad_simulator.py  noise_models.py
src/theory/: physics_constants.py  quantum_environment.py
tests/: test_installation.py
